preventing out of bounds. improving new user info prompt. new.html bug fix.

--- a/css/main.css
+++ b/css/main.css
@@ -171,25 +171,26 @@ span.anchor, #thecanvas div span {
 
 #info {
     display:none;
-    z-index:101;
+    z-index:5;
     color:white;
-    position:absolute; top:30%;
+    position:absolute; top:5%;
     width:80%;
+    height:80%;
     margin-left:7%;
     padding:0 10px;
-    border:1px solid white;
+    border:0;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    background:rgba(0,0,0,1);
     background:rgba(178,204,204,0.9);
+    background:rgba(0,0,0,0.5);
 }
 #info button { color:white; opacity:0.8; }
 #info button:hover { color:white; opacity:1; }
 
 #info p { 
     text-align:center; 
-    margin:.75em 0;
+    margin:2em 0;
     }
 
 #info strong { /* fake items */
@@ -232,7 +233,17 @@ body, #thecanvas {
     background:transparent;
 }
 
+#thecanvas {
+    position:absolute;
+    top:0;
+    width:100%;
+}
 .container { width:100%; }
+
+h1 { 
+    margin:10px; 
+    color:rgba(255,255,255,0.5); 
+    }
 
 .navbar { z-index:2; display:none; }
 .navbar .brand { margin-left:-5px; }
